# DeepDiaryRos

./: .gitignore  6轴臂开发笔记.md  README.md  feedback.txt  setup_ros_project.sh
src/URDF_armv001/: CMakeLists.txt  package.xml  urdf.rviz
src/URDF_armv001/config/: joint_names_URDF_armv001.yaml
src/URDF_armv001/launch/: display (copy).launch  display.launch  gazebo.launch
src/URDF_armv001/meshes/: second_Link.STL
src/URDF_armv001/urdf/: URDF_armv001.csv  URDF_armv001.urdf  URDF_armv001.xacro  deep-arm.xacro
src/URDF_armv001_demo/: CMakeLists.txt  package.xml  queue.py
src/URDF_armv001_demo/config/: arm_controller.yaml  serial_config.yaml  user_interface.yaml
src/URDF_armv001_demo/launch/: arm_control_system.launch  arm_controller.launch  real_arm_control.launch  simple_test.launch  test_complete_system.launch  test_feedback_processor.launch  test_gui_feedback.launch  test_serial.launch  test_serial_node.launch  test_trajectory_processor.launch  test_trajectory_sending.launch  tools.launch
src/URDF_armv001_demo/scripts/: __init__.py  demo_launcher.py  fake_feedback.py  feedback_handlers.py  feedback_processor.py  gui_feedback.py  moveit_controller.py  (+15 more)
src/URDF_armv001_gazebo/: CMakeLists.txt  package.xml
src/URDF_armv001_gazebo/config/: URDF_armv001_gazebo_controllers.yaml  URDF_armv001_gazebo_joint_states.yaml
src/URDF_armv001_gazebo/launch/: deep_arm_bringup_moveit.launch  deep_arm_gazebo_states.launch  deep_arm_gazebo_world.launch  deep_arm_trajectory_controller.launch
src/URDF_armv001_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+79 files in other folders)
